--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -88,6 +88,7 @@
     margin-bottom: 0 !important;
     display :inline;
     line-height: 16px;
+    font-size: 14px;
 }
 
 .card.styled input[type="text"]{
@@ -205,7 +206,7 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%239C92AC' fill-opacity='0.12'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
     clear: both;
     border-radius: 8px;
-    margin: 10px 0 0 0;
+    margin: 10px 0 10px 0;
 }
 
 .card.styled .card_back .magnet_stripe {
@@ -232,7 +233,7 @@
 }
 
 .card.styled .card_back .card_security input {
-    max-width: 40%;
+    max-width: 90%;
     width: 100%;
     float: left;
     text-align: center;
@@ -244,4 +245,90 @@
     bottom: 15px;
     right: 15px;
     text-align: right;
+}
+
+/* Tooltip */
+
+.card_security, .card_kind {
+    clear:both;
+}
+
+.card.blank .card_security .field {
+    float:left;
+    width: 80%;
+}
+
+.card.styled .card_security .field {
+    float:left;
+    width: 50%;
+    margin: 0;
+}
+
+.card.blank .card_security .info {
+    padding: 2px 5px;
+}
+
+.card.styled .card_security .info {
+    padding: 7px 5px 0 ;
+}
+
+.card .card_security .info {
+    float:left;
+    width: 20%;
+    position: relative;
+}
+
+.card .card_security .info svg {
+    height : 20px;
+    width: 20px;
+    cursor: pointer;
+    fill: #989898;
+}
+
+.card .card_security .info .popup {
+    font-family: "Helvetica Neue", Verdana, Arial, sans-serif;
+    text-transform :none;
+    display :none;
+    background: white;
+    border: 1px solid black;
+    padding: 20px;
+    position: absolute;
+    width: 200px;
+    left: -205px;
+    top: -20px;
+    z-index: 100;
+}
+
+.card.styled .card_security .info .popup {
+    top: -14px;
+}
+
+.card .card_security .info .popup:before {
+    position: absolute;
+    left: 199px;
+    top: 22px;
+    content: '';
+    width: 0;
+    height: 0;
+    border-right: 7px solid transparent;
+    border-left: 7px solid #000000;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+}
+
+.card .card_security .info .popup:after {
+    position: absolute;
+    left: 197.5px;
+    top: 22px;
+    content: '';
+    width: 0;
+    height: 0;
+    border-right: 7px solid transparent;
+    border-left: 7px solid #fff;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+}
+
+.card .card_security .info:hover .popup {
+    display :block;
 }
