--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -91,7 +91,8 @@
     font-size: 14px;
 }
 
-.card.styled input[type="text"]{
+.card.styled input[type="text"],
+.card.styled input[type="tel"] {
     height: 35px;
     border: 1px solid #d1d1d1;
     margin-left: 10px;
@@ -128,7 +129,7 @@
 }
 
 .card.styled .card_front .cardNumber_container input {
-    width: 100%;
+    width: 100% !important;
     float: left;
     margin: 0;
 }
@@ -247,29 +248,10 @@
     text-align: right;
 }
 
-/* Tooltip */
+/* Creditcard Security Code - Tooltip =============================================================================== */
 
 .card_security, .card_kind {
     clear:both;
-}
-
-.card.blank .card_security .field {
-    float:left;
-    width: 80%;
-}
-
-.card.styled .card_security .field {
-    float:left;
-    width: 50%;
-    margin: 0;
-}
-
-.card.blank .card_security .info {
-    padding: 2px 5px;
-}
-
-.card.styled .card_security .info {
-    padding: 7px 5px 0 ;
 }
 
 .card .card_security .info {
@@ -290,35 +272,31 @@
     text-transform :none;
     display :none;
     background: white;
-    border: 1px solid black;
     padding: 20px;
     position: absolute;
     width: 200px;
     left: -205px;
     top: -20px;
+    box-shadow: 1px 2px 3px rgba(144, 144, 144, 0.6196078431372549);
     z-index: 100;
-}
-
-.card.styled .card_security .info .popup {
-    top: -14px;
 }
 
 .card .card_security .info .popup:before {
     position: absolute;
-    left: 199px;
+    left: 200px;
     top: 22px;
     content: '';
     width: 0;
     height: 0;
     border-right: 7px solid transparent;
-    border-left: 7px solid #000000;
+    border-left: 7px solid #d4d4d4;
     border-top: 7px solid transparent;
     border-bottom: 7px solid transparent;
 }
 
 .card .card_security .info .popup:after {
     position: absolute;
-    left: 197.5px;
+    left: 198.5px;
     top: 22px;
     content: '';
     width: 0;
@@ -331,4 +309,31 @@
 
 .card .card_security .info:hover .popup {
     display :block;
+}
+
+/* Exceptions for Blank */
+
+.card.blank .card_security .field {
+    float:left;
+    width: 80%;
+}
+
+.card.blank .card_security .info {
+    padding: 2px 5px;
+}
+
+/* Exceptions for Styled */
+
+.card.styled .card_security .field {
+    float:left;
+    width: 50%;
+    margin: 0;
+}
+
+.card.styled .card_security .info {
+    padding: 7px 5px 0 ;
+}
+
+.card.styled .card_security .info .popup {
+    top: -14px;
 }
