--- a/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -8,13 +8,13 @@
             <div class="card_front">
                 <div class="cardNumber_container">
                     <label for="cardNumber"><?php echo $this->__('Card number'); ?></label>
-                    <input id="cardNumber" type="tel" name="cardNumber" onblur="checkCardType(this)" onkeydown="removeSpaces(this)"/>
+                    <input id="cardNumber" class="required-entry" type="tel" name="cardNumber" onblur="processCardNumber(this)" onkeydown="removeSpaces(this)"/>
                 </div>
 
                 <div class="expirationMonth_container">
                     <label for="expirationMonth"><?php echo $this->__('Expiration');?></label>
                     <div class="select_wrapper">
-                        <select id="expirationMonth" type="text" name="expirationMonth" onblur="getEncryptedData()">
+                        <select id="expirationMonth" class="required-entry" type="text" name="expirationMonth" onblur="getEncryptedData()">
                             <option value="0"><?php echo  $this->__('Select a month'); ?></option>
                             <option value="1"><?php echo  $this->__('01 - January');   ?></option>
                             <option value="2"><?php echo  $this->__('02 - February');  ?></option>
@@ -31,12 +31,12 @@
                         </select>
                     </div>
 
-                    <input id="expirationYear" type="text" name="expirationYear" onblur="getEncryptedData()" />
+                    <input id="expirationYear" type="text" class="required-entry" name="expirationYear" onblur="getEncryptedData()" />
                 </div>
 
                 <div class="cardHolderName_container">
                     <label for="cardHolderName"><?php echo $this->__('Name cardholder');?></label>
-                    <input id="cardHolderName" type="text" name="cardHolderName" onblur="getEncryptedData()" />
+                    <input id="cardHolderName" type="text" class="required-entry" name="cardHolderName" onblur="getEncryptedData()" />
                 </div>
             </div>
 
@@ -45,7 +45,7 @@
                 <div class="card_security">
                     <label for="cvc"><?php echo $this->__('Security code');?></label>
                     <div class="field">
-                        <input id="cvc" type="text" name="cvc" onblur="getEncryptedData()" />
+                        <input id="cvc" type="text" class="required-entry" name="cvc" onblur="getEncryptedData()" />
                     </div>
                     <div class="info">
                         <svg xmlns="http://www.w3.org/2000/svg" width="510" height="510" viewBox="0 0 510 510"><path d="M229.5 382.5h51v-153h-51V382.5zM255 0C114.8 0 0 114.8 0 255s114.8 255 255 255 255-114.7 255-255S395.3 0 255 0zM255 459c-112.2 0-204-91.8-204-204S142.8 51 255 51s204 91.8 204 204S367.2 459 255 459zM229.5 178.5h51v-51h-51V178.5z"/></svg>
