--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
@@ -98,16 +98,40 @@
 
 /* Credit Card - Default ============================================================================================ */
 
-.card.blank .expirationMonth_container,
+.card.blank .expiration_container,
 .card.blank .cardHolderName_container,
 .card.blank .card_back,
 .card.blank .card_kind {
     margin: 10px 0;
 }
 
-.card.blank .select_wrapper select {
+.card.blank .expiration_container {
+    width: 98%;
+}
+
+.card .card_front .expiration_container label {
     width: 100%;
+    float: left;
+}
+
+.card .card_front .expiration_container .select_wrapper {
+    float: left;
+    width: 50%;
+    position: relative;
+    cursor: pointer;
+}
+
+.card .card_front .expiration_container .select_wrapper:nth-child(3) {
+    width: 43%; /* IE backup */
+    width: calc(50% - 10px);
+    margin-left: 10px;
+}
+
+.card.blank .select_wrapper #expirationMonth,
+.card.blank .select_wrapper #expirationYear {
     margin-bottom: 10px;
+    width: 100% !important;
+    max-width: 156px;
 }
 
 /* Credit Card - Styled ============================================================================================= */
@@ -160,7 +184,7 @@
 }
 
 .card.styled .card_front .cardNumber_container,
-.card.styled .card_front .expirationMonth_container,
+.card.styled .card_front .expiration_container,
 .card.styled .card_front .cardHolderName_container {
     float:left;
     width: 100%;
@@ -178,25 +202,7 @@
     margin: 0;
 }
 
-.card.styled .card_front .expirationMonth_container label {
-    width: 100%;
-    float: left !important;
-}
-
-.card.styled .card_front .expirationMonth_container input {
-    float: left;
-    width: 45% !important; /* IE backup */
-    width: calc(50% - 10px) !important;
-}
-
-.card.styled .card_front .expirationMonth_container .select_wrapper {
-    position: relative;
-    float: left;
-    width: 50%;
-    cursor: pointer;
-}
-
-.card.styled .card_front .expirationMonth_container .select_wrapper:after {
+.card.styled .card_front .expiration_container .select_wrapper:after {
     content: '\203A';
     transform: rotate(90deg);
     padding: 10px;
@@ -206,7 +212,7 @@
     pointer-events: none;
 }
 
-#onestepcheckout-form .card.styled .card_front .expirationMonth_container select {
+#onestepcheckout-form .card.styled .card_front select {
     float:left;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -226,14 +232,14 @@
 }
 
 .card.styled .card_front .cardHolderName_container label {
-    max-width: 30%;
+    max-width: 40%;
     float: left;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .card.styled .card_front .cardHolderName_container input {
-    max-width: 70%;
+    max-width: 60%;
     width: 100%;
     float: left;
     margin: 0;
