--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -77,6 +77,7 @@
     cursor: pointer;
 }
 
+.card.blank .select_wrapper #cardType,
 .card.blank .select_wrapper #expirationMonth,
 .card.blank .select_wrapper #expirationYear {
     margin-bottom: 10px;
@@ -86,6 +87,27 @@
 
 
 /* Credit Card - Styled ============================================================================================= */
+
+/* Card Type */
+
+.card.styled .cardType_container {
+    width: 50%;
+    float:left;
+}
+
+.card.styled .cardType_container .select_wrapper {
+    width: 100%;
+    float:left;
+}
+
+/* Card Number */
+
+.card.styled .cardNumber_container {
+    width: 43%; /* IE backup */
+    width: calc(50% - 10px);
+    margin-left: 10px;
+    float:left;
+}
 
 .card.styled {
     font-family: "Courier New", "Helvetica Neue", Verdana, Arial, sans-serif;
@@ -130,12 +152,12 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%239C92AC' fill-opacity='0.12'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-.card.styled .card_front .cardNumber_container,
 .card.styled .card_front .expiration_container,
 .card.styled .card_front .cardHolderName_container {
     float:left;
     width: 100%;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .card.styled .card_front .cardNumber_container label {
@@ -149,11 +171,15 @@
     margin: 0;
 }
 
+
+.card.styled .card_front .select_wrapper {
+    position: relative;
+    cursor: pointer;
+}
+
 .card.styled .card_front .expiration_container .select_wrapper {
     float: left;
     width: 50%;
-    position: relative;
-    cursor: pointer;
 }
 
 .card.styled .card_front .expiration_container .select_wrapper:nth-child(3) {
@@ -177,7 +203,7 @@
     background-image: none !important;
 }
 
-.card.styled .card_front .expiration_container .select_wrapper:after {
+.card.styled .card_front .select_wrapper:after {
     content: '\203A';
     transform: rotate(90deg);
     padding: 10px;
