--- a/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
+++ b/skin/frontend/rwd/default/css/TIG/Buckaroo3Extended/styles_osc.css
@@ -96,17 +96,55 @@
     margin-left: 0 !important;
 }
 
-/* Credit Card - Default ============================================================================================ */
+/* Credit Card - Fields ============================================================================================= */
 
-.card.blank .expiration_container,
-.card.blank .cardHolderName_container,
-.card.blank .card_back,
-.card.blank .card_kind {
-    margin: 10px 0;
+/* Reset */
+.card .card_front .select_wrapper {
+    position: relative;
+    cursor: pointer;
+}
+.card .card_front .select_wrapper select {
+    margin-top: 0;
 }
 
-.card.blank .expiration_container {
-    width: 98%;
+.card .card_front label {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
+
+/* Card Type */
+
+.card .cardType_container {
+    width: 50%;
+    float:left;
+}
+
+.card .cardType_container .select_wrapper {
+    width: 100%;
+    float:left;
+}
+
+/* Card Number */
+
+.card .cardNumber_container {
+    width: 43%; /* IE backup */
+    width: calc(50% - 10px);
+    margin-left: 10px;
+    float:left;
+}
+
+/* Expiration */
+
+.card .card_front .expiration_container {
+    float:left;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.card .card_front .expiration_container {
+    clear:both;
 }
 
 .card .card_front .expiration_container label {
@@ -117,16 +155,28 @@
 .card .card_front .expiration_container .select_wrapper {
     float: left;
     width: 50%;
-    position: relative;
-    cursor: pointer;
 }
 
 .card .card_front .expiration_container .select_wrapper:nth-child(3) {
-    width: 43%; /* IE backup */
-    width: calc(50% - 10px);
-    margin-left: 10px;
+    width       :43%; /* IE backup */
+    width       :calc(50% - 10px);
+    margin-left :10px;
 }
 
+/* Card Holder */
+
+.card .card_front .cardHolderName_container {
+    float:left;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+/* Security Code */
+/* ... Check out the code beneath */
+
+/* Blank ============================================================================================================ */
+
+.card.blank .select_wrapper #cardType,
 .card.blank .select_wrapper #expirationMonth,
 .card.blank .select_wrapper #expirationYear {
     margin-bottom: 10px;
@@ -165,7 +215,12 @@
     border: 1px solid #d1d1d1;
     margin-left: 10px;
     padding: 0 10px;
+    width: 100% !important;
     background: white;
+}
+
+.card.styled #cardNumber {
+    margin-left: 0;
 }
 
 /* Credit Card Front */
@@ -183,26 +238,9 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%239C92AC' fill-opacity='0.12'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-.card.styled .card_front .cardNumber_container,
-.card.styled .card_front .expiration_container,
-.card.styled .card_front .cardHolderName_container {
-    float:left;
-    width: 100%;
-    margin-bottom: 10px;
-}
+/* Select styling */
 
-.card.styled .card_front .cardNumber_container label {
-    width: 100%;
-    float: left;
-}
-
-.card.styled .card_front .cardNumber_container input {
-    width: 100% !important;
-    float: left;
-    margin: 0;
-}
-
-.card.styled .card_front .expiration_container .select_wrapper:after {
+.card.styled .card_front .select_wrapper:after {
     content: '\203A';
     transform: rotate(90deg);
     padding: 10px;
@@ -226,6 +264,8 @@
     width: 100% !important;
     background-image: none !important;
 }
+
+/* Card holder */
 
 .card.styled .card_front .cardHolderName_container {
     margin: 5px 0 0 0;
@@ -387,7 +427,7 @@
     }
 }
 
-/* Exceptions for Blank */
+/* Tooltip Exceptions for Blank */
 
 .card.blank .card_security .field {
     float:left;
@@ -398,7 +438,7 @@
     padding: 2px 5px;
 }
 
-/* Exceptions for Styled */
+/* Tooltip Exceptions for Styled */
 
 .card.styled .card_security .field {
     float:left;
