--- a/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -15,27 +15,14 @@
                     <label for="expirationMonth"><?php echo $this->__('Expiration');?></label>
                     <div class="select_wrapper">
                         <select id="expirationMonth" class="required-entry" name="expirationMonth" onblur="getEncryptedData()">
-                            <option value="0"><?php echo  $this->__('Month'); ?></option>
-                            <option value="1"><?php echo  $this->__('01 - January');   ?></option>
-                            <option value="2"><?php echo  $this->__('02 - February');  ?></option>
-                            <option value="3"><?php echo  $this->__('03 - March');     ?></option>
-                            <option value="4"><?php echo  $this->__('04 - April');     ?></option>
-                            <option value="5"><?php echo  $this->__('05 - May');       ?></option>
-                            <option value="6"><?php echo  $this->__('06 - June');      ?></option>
-                            <option value="7"><?php echo  $this->__('07 - July');      ?></option>
-                            <option value="8"><?php echo  $this->__('08 - August');    ?></option>
-                            <option value="9"><?php echo  $this->__('09 - September'); ?></option>
-                            <option value="10"><?php echo $this->__('10 - October');   ?></option>
-                            <option value="11"><?php echo $this->__('11 - November');  ?></option>
-                            <option value="12"><?php echo $this->__('12 - December');  ?></option>
+                            <?php for ($m=1; $m<=12; $m++) {
+                            $month = date('F', mktime(0,0,0, $m, 1, date('Y')));
+                            echo '<option>'. $month. '</option>';
+                            }?>
                         </select>
                     </div>
                     <div class="select_wrapper" >
                         <select id="expirationYear" class="required-entry" name="expirationYear" onblur="getEncryptedData()">
-                            <option value="0"><?php echo  $this->__('Year'); ?></option>
-                            <option value="1"><?php echo  $this->__('2019');   ?></option>
-                            <option value="2"><?php echo  $this->__('2020');   ?></option>
-                            <option value="3"><?php echo  $this->__('2021');   ?></option>
                         </select>
                     </div>
                 </div>
