--- a/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
+++ b/app/design/frontend/rwd/default/template/buckaroo3extended/creditcard/checkout/form.phtml
@@ -8,17 +8,20 @@
             <div class="card_front">
 
                 <div class="cardType_container">
-                    <label for="cardType"><?php echo $this->__('Card type'); ?></label>
+                    <label for="buckaroo3extended_creditcard_method"><?php echo $this->__('Card type'); ?></label>
                     <div class="select_wrapper">
-                        <select id="cardType" class="required-entry" name="cardType" onblur="getEncryptedData()">
-                            <option value="Card type"><?php echo  $this->__('Card type');   ?></option>
+                        <select id="buckaroo3extended_creditcard_method" class="required-entry" name="buckaroo3extended_creditcard_method" onchange="changeCardLogo(this.options[this.selectedIndex])">
+                            <option value="" data-logo="/creditcard_types/creditcard_blank.png"><?php echo $this->__('Please select a card'); ?></option>
+                            <?php foreach ($this->selectedIssuers() as $key => $cardName) {
+                                    echo '<option value="' . $cardName['code'] . '" data-logo="' . $cardName['logo'] . '">' . $cardName['label'] . '</option>';
+                                }?>
                         </select>
                     </div>
                 </div>
 
                 <div class="cardNumber_container">
                     <label for="cardNumber"><?php echo $this->__('Card number'); ?></label>
-                    <input id="cardNumber" class="required-entry" type="tel" name="cardNumber" onblur="processCardNumber(this)" onkeydown="removeSpaces(this)"/>
+                    <input id="cardNumber" class="required-entry" type="tel" name="cardNumber" onblur="getEncryptedData()" onkeydown="removeSpaces(this)"/>
                 </div>
 
                 <div class="expiration_container">
@@ -26,14 +29,16 @@
                     <div class="select_wrapper">
                         <select id="expirationMonth" class="required-entry" name="expirationMonth" onblur="getEncryptedData()">
                             <?php for ($m=1; $m<=12; $m++) {
-                            $month = date('F', mktime(0,0,0, $m, 1, date('Y')));
-                            echo '<option>'. $month. '</option>';
+                            echo '<option' . ' value="' . $m .'">' . $m. '</option>';
                             }?>
                         </select>
                     </div>
 
                     <div class="select_wrapper">
                         <select id="expirationYear" class="required-entry" name="expirationYear" onblur="getEncryptedData()">
+                            <?php for ($y=2019; $y<=2029; $y++) {
+                                echo '<option' . ' value="' . $y .'">' . $y. '</option>';
+                            }?>
                         </select>
                     </div>
                 </div>
@@ -62,16 +67,7 @@
                     <img class="creditcard-logo" alt="Credit Card type" height="35" src="<?php echo $this->getSkinUrl('images/tig_buckaroo3extended/creditcard_types/creditcard_blank.png');?>" />
                 </div>
                 <input type="hidden" name="buckaroo3extended_creditcard_encryptedCardData" id="buckaroo3extended_creditcard_encryptedCardData"/>
-                <input type="hidden" name="buckaroo3extended_creditcard_method" id="buckaroo3extended_creditcard_method"/>
             </div>
         </div>
     </form>
 </ul>
-
-<script>
-    jQuery_1123('#cardNumber').on("keydown", function(){
-       if(jQuery_1123('#cardNumber').val().length <= 4){
-           jQuery_1123('.creditcard-logo').attr("src", "<?php echo $this->getSkinUrl('images/tig_buckaroo3extended/creditcard_types/creditcard_blank.png');?>");
-        }
-    });
-</script>
